feat: add method to delete a ltw content
